Update to statistics

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             </div>
         </div>
         <div class="statistics ishidden">
-            <div class="stat">Students Enrolled<div class="statcounter" id="stat1">857</div></div>
-            <div class="stat">Countries Taught<div class="statcounter" id="stat2">54</div></div>
-            <div class="stat">Course Reviews<div class="statcounter" id="stat3">203</div></div>
-            <div class="stat">Hours Consumed<div class="statcounter" id="stat4">7,792</div></div>
+            <div class="stat">Students Enrolled<div class="statcounter" id="stat1">13,327</div></div>
+            <div class="stat">Countries Taught<div class="statcounter" id="stat2">133</div></div>
+            <div class="stat">Course Reviews<div class="statcounter" id="stat3">1214</div></div>
+            <div class="stat">Hours Consumed<div class="statcounter" id="stat4">164,240</div></div>
         </div>
         <div class="courses">
         <a id="courses"></a>
@@ -81,7 +81,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="course2 ishidden">
+                    <!-- <div class="course2 ishidden">
                         <a href="https://mastersofcloud.teachable.com/p/citrix-cloud-introduction">
                             <div class="text2 white">
                                 <h3>Citrix Cloud - Introduction</h3>
@@ -89,7 +89,7 @@
                                 AWS and Microsoft Azure platforms.
                             </div>
                         </a>
-                    </div>
+                    </div> -->
                     <div class="course3 ishidden">
                         <a href="https://mastersofcloud.teachable.com/p/aws-appstream-2-0-introduction">
                             <div class="text3 white">
@@ -103,7 +103,7 @@
         </div>
         <div class="resources" id="resources">
             <div class="rescontainer">
-        <h2>Resources</h2>
+        <!-- <h2>Resources</h2>
             <h3>Citrix Courses - Acronyms</h3>
             <ul>
                 <li>CC = Citrix Cloud</li>
@@ -128,8 +128,8 @@
                 <li>EC2 = Elastic Compute Cloud</li>
                 <li>RDS = Relational Database Service</li>
                 <li>IAM = Identity and Access Manager</li>
-                <li>CF = CloudFront</li>
-            <h3>Downloads</h3>
+                <li>CF = CloudFront</li> -->
+            <h2>Downloads</h2>
                 <li>Download Our Free 200 page Citrix NetScaler Guide <a href="https://s3.eu-west-2.amazonaws.com/mastersofcloudresources/Netscaler+Guide+2017+2.1.pdf" target="_blank">HERE</a></li>
                 <li>Github link to Our AppStream Image Build Script <a href="https://github.com/scanjam/appstream2-imagebuild-script" target="_blank">HERE</a></li>
                 
