--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C600%7CRaleway%3A400%2C500%2C600' type='text/css' media='all' /> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!----<link rel="stylesheet" href="./css/normalize.css"> -->
-    <link rel="stylesheet" href="https://www.mastersof.cloud/css/normalize.css">
-    <link rel="stylesheet" href="https://www.mastersof.cloud/css/styles.css"/>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/styles.css"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116131132-1"></script>
     <script>
@@ -62,76 +62,74 @@
             <div class="stat">Hours Consumed<div class="statcounter" id="stat4">164,240</div></div>
         </div>
         <div class="courses">
-        <a id="courses"></a>
-            <h2>Our Courses</h2>
-            <p>Welcome to Masters of Cloud!<br>
-                Come <strong><em>'Learn The Future'</em></strong> with us with our online training platform.<br>
-                We cover technolgies from Citrix, AWS, Azure and Google<br>
-                There are new courses and videos being added so be sure to check back often.<br>
-                Wishing you all the best on your learning journey!
+            <a id="courses"></a>
+                <h2>Our Courses</h2>
+                <p>Welcome to Masters of Cloud!<br>
+                    Come <strong><em>'Learn The Future'</em></strong> with us with our online training platform<br>
+                    <h3><em>-Training Admin</em></h3>
 
-                <h3><em>-Training Admin</em></h3>
-                <div class="coursecontainer">
-                    <div class="course1 ishidden">
-                        <a href="https://mastersofcloud.teachable.com/p/citrix-netscaler-part-1-the-basics">
-                            <div class="text1 black">
-                                <h3>Citrix NetScaler</h3>
-                                This course covers an introduction to what the Citrix NetScaler is and
-                                how to leverage the power of this amazing Appliance from Citrix.
-                            </div>
-                        </a>
+                    <div class="coursecontainer">
+                        
+                        <div class="course1 ishidden">
+                            <a href="https://www.udemy.com/course/citrix-netscaler-introduction/?referralCode=15F8C387C71A9A5D2111"target="_blank">
+                                <div class="text1 black">
+                                    <h3>Citrix NetScaler - Intro</h3>
+                                    This course covers an introduction to what the Citrix NetScaler is and
+                                    how to leverage the power of this amazing Appliance from Citrix.
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course3 ishidden">
+                            <a href="https://www.udemy.com/course/aws-appstream-20-introduction/?referralCode=0F671F5C155D9906CA29"target="_blank">
+                                <div class="text3 white">
+                                    <h3>Amazon AppStream 2.0 - Intro</h3>
+                                    A Free Introductory Course For Amazon AppStream 2.0
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course3 ishidden">
+                            <a href="https://www.udemy.com/course/amazon-appstream-20-advanced/?referralCode=F4FC2860BA5CADC6A7D6"target="_blank">
+                                <div class="text3 white">
+                                    <h3>Amazon AppStream 2.0 - Advanced</h3>
+                                    The Advanced Series For Amazon AppStream 2.0. <br>Looking at technologies like fullys automated AppStream image builds, domain joined fleets and SAML with IAM Identity Center.
+                                </div>
+                            </a>
+                        </div>
                     </div>
-                    <!-- <div class="course2 ishidden">
-                        <a href="https://mastersofcloud.teachable.com/p/citrix-cloud-introduction">
-                            <div class="text2 white">
-                                <h3>Citrix Cloud - Introduction</h3>
-                                An introduction to Citrix Cloud and deploying resources to On Premise,
-                                AWS and Microsoft Azure platforms.
-                            </div>
-                        </a>
-                    </div> -->
-                    <div class="course3 ishidden">
-                        <a href="https://mastersofcloud.teachable.com/p/aws-appstream-2-0-introduction">
-                            <div class="text3 white">
-                                <h3>AWS AppStream 2.0 - Introduction</h3>
-                                An introduction to AWS AppStream 2.0 and how to quickly get up to speed with it.
-                            </div>
-                        </a>
-                    </div>
-                </div>
 
+                    <div class="coursecontainer">
+                        <div class="course2 ishidden">
+                            <a href="https://teachme.mastersof.cloud/course/amazon-workspaces"target="_blank">
+                                <div class="text2 white">
+                                    <h3>The Complete Guide to Amazon WorkSpaces</h3>
+                                    This all-encompassing video course covers everything you need to know about Amazons virtual desktop solution
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course5 ishidden">
+                            <a href="https://www.udemy.com/course/a-beginners-guide-to-protecting-your-family-online/?referralCode=C909C44D64883CA0C56F"target="_blank">
+                                <div class="text5 white">
+                                    <h3>A Beginners Guide To Protecting Your Family Online - Intro</h3>
+                                    Our FREE introduction to the basics of home internet safety and parental controls. Covering topics like mobile phone controls, home internet restrictions, streaming servces, VPNs and OpenDNS. 
+                                </div>
+                            </a>
+                        </div>
+                        <div class="course5 ishidden">
+                            <a href="https://www.udemy.com/course/a-beginners-guide-to-protecting-your-family-online-advanced/?referralCode=006B7CF95EB3C690EEE6"target="_blank">
+                                <div class="text5 white">
+                                    <h3>A Beginners Guide To Protecting Your Family Online - Advanced</h3>
+                                This course builds on the introductory course (for those who have more time!) and we cover the full step by step guides to configure the parents controls and restrictions on things like iPhone, Google devices, Sony PlayStation, Nintendo Switch, and common streaming sites like Netflix and Disney+
+                                </div>
+                            </a>
+                        </div>
+                   </div>
+                </p>
         </div>
         <div class="resources" id="resources">
             <div class="rescontainer">
-        <!-- <h2>Resources</h2>
-            <h3>Citrix Courses - Acronyms</h3>
-            <ul>
-                <li>CC = Citrix Cloud</li>
-                <li>RL = Resource Location</li>
-                <li>XA/XD = XenApp and XenDesktop Service</li>
-                <li>MCS = Machine Creation Services</li>
-                <li>MC = Machine Catalog</li>
-                <li>DG = Delivery Group</li>
-                <li>VDA = Virtual Desktop Agent (Server or Desktop end point where users connect to)</li>
-                <li>OP = On Premises / On Prem</li>
-                <li>AWS = Amazon Web Services</li>
-                <li> AZ = Microsoft Azure</li>
-                <li>MS= Microsoft</li>
-                <li>XM = XenMobile</li>
-                <li>PU/AP = Per User Per Annum</li>
-            <h3>AWS Courses - Acronyms</h3>
-                <li>AWS = Amazon Web Services</li>
-                <li>EW1 = eu-west-1</li>
-                <li>EW2 = eu-west-2</li>
-                <li>S3 = Simple Storage Service</li>
-                <li>VPC = Virtual Private Cloud</li>
-                <li>EC2 = Elastic Compute Cloud</li>
-                <li>RDS = Relational Database Service</li>
-                <li>IAM = Identity and Access Manager</li>
-                <li>CF = CloudFront</li> -->
-            <h2>Downloads</h2>
+            <h2>Resources</h2>
                 <li>Download Our Free 200 page Citrix NetScaler Guide <a href="https://s3.eu-west-2.amazonaws.com/mastersofcloudresources/Netscaler+Guide+2017+2.1.pdf" target="_blank">HERE</a></li>
-                <li>Github link to Our AppStream Image Build Script <a href="https://github.com/scanjam/appstream2-imagebuild-script" target="_blank">HERE</a></li>
+                <li>Github Link to Our additional Course Assets <a href="https://github.com/scanjam/" target="_blank">HERE</a></li>
                 
 
                 </ul>
@@ -149,15 +147,15 @@
                             <li><a href="https://www.facebook.com/mastersofcloud/" target="_blank"><i class="fab fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/mastersofcloud1" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/masters-of-cloud" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                            <li><a href="mailto:trainingadmin@mastersof.cloud"><i class="fas fa-envelope-square"></i></a></li>
+                            <li><a href="mailto:training@mastersof.cloud"><i class="fas fa-envelope-square"></i></a></li>
                         </ul>
                 </div>
-                    <p>&copy; Copyright Masters of Cloud 2022. All Rights Reserved.</p>
+                    <p>&copy; Copyright Masters of Cloud 2024. All Rights Reserved.</p>
         </div>
 
-        <script src="https://www.mastersof.cloud/js/jquery.js"></script>
-        <script src="https://www.mastersof.cloud/js/zenscroll-min.js"></script>
-        <script src="https://www.mastersof.cloud/js/jquery.waypoints.min.js"></script>
-        <script src="https://www.mastersof.cloud/js/app.js"></script>
+        <script src="./js/jquery.js"></script>
+        <script src="./js/zenscroll-min.js"></script>
+        <script src="./js/jquery.waypoints.min.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 </html>
