2025 Fixes and Stats Update

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Masters of Cloud!</title>
+    <meta property="og:title" content="Masters of Cloud">
+    <meta property="og:description" content="Learn the Future with our Cloud Training Courses">
+    <meta property="og:image" content="https://www.mastersof.cloud/images/logo_white_transparent.svg">
+    <meta property="og:url" content="https://www.mastersof.cloud/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/png" href="https://www.mastersof.cloud/images/favicon.png"/>
+    <meta name="description" content="Online cloud training platform - Learn Cloud, Amazon Web Services, Amazon WorkSpaces, AppStream and more.">
     <link rel="shortcut icon" type="image/png" href="https://www.mastersof.cloud/images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <!-- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C600%7CRaleway%3A400%2C500%2C600' type='text/css' media='all' /> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!----<link rel="stylesheet" href="./css/normalize.css"> -->
     <link rel="stylesheet" href="./css/normalize.css">
@@ -65,7 +68,7 @@
             <a id="courses"></a>
                 <h2>Our Courses</h2>
                 <p>Welcome to Masters of Cloud!<br>
-                    Come <strong><em>'Learn The Future'</em></strong> with us with our online training platform<br>
+                    Come <strong><em>'Learn The Future'</em></strong> with us with our online training platform</p>
                     <h3><em>-Training Admin</em></h3>
 
                     <div class="coursecontainer">
