--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                 <!-- <div class="container"> -->
                     <img id="test" src="https://www.mastersof.cloud/images/logo_white_transparent.svg" alt="masters of cloud logo">
                     <nav role="navigation" aria-label="Main navigation">
-                    <button class="mobile-menu-toggle" aria-label="Toggle mobile menu" aria-expanded="false">
-                        <i class="fas fa-bars" aria-hidden="true"></i>
-                    </button>
+                    <i class="fas fa-bars"></i>
                         <ul role="menubar">
                             <li role="none"><a href="#" role="menuitem">Home</a></li>
                             <li role="none"><a href="#courses" role="menuitem">Courses</a></li>
